<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_nav"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_directions"
        android:showAsAction="ifRoom"
        android:title="@string/menu_nav"/>
    
    <item
        android:id="@+id/menu_theme"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_theme"/>
    
    <item
        android:id="@+id/menu_goole_play"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/menu_play"/>
    
    <item
        android:id="@+id/menu_appops"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/menu_appops"/>
    
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"/>

</menu>