<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/list"
        android:layout_above="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    <TextView android:id="@+id/empty"
        android:text="@string/no_recent_list"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:layout_alignParentBottom="true" >
        
        <TextView android:id="@+id/title"
            android:text="@string/recent_list_title"
            android:textSize="@dimen/first_size"
            android:layout_marginRight="10dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/clear_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/clear_recent" />
    </RelativeLayout>

</RelativeLayout>