<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@android:id/list"
        android:layout_above="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fastScrollEnabled="true" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textSize="@dimen/node_select_size"
        android:visibility="gone" />
    
    <ProgressBar style="@android:style/Widget.ProgressBar.Small"
        android:id="@+id/loading"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <LinearLayout android:id="@+id/control"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button 
            android:id="@+id/prev"
            android:text="@string/prev"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dip"/>
        <Button 
            android:id="@+id/next"
            android:text="@string/next"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dip"/>
    </LinearLayout>

</RelativeLayout>