<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ProgressBar android:id="@android:id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" />

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar"
        android:fastScrollEnabled="true"
        android:choiceMode="singleChoice"
        android:paddingLeft="@dimen/list_padding"
        android:paddingRight="@dimen/list_padding" />
    
    <TextView 
        android:id="@+id/current"
        android:visibility="gone"
        android:textSize="@dimen/node_select_size"
        android:textColor="@android:color/white"
        android:background="@drawable/replies"
        android:padding="6dip"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView 
        android:id="@android:id/empty"
        android:visibility="gone"
        android:text="@string/app_name"
        android:textSize="@dimen/node_select_size"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <LinearLayout android:id="@+id/bottom_bar"
        android:background="@android:color/darker_gray"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	        
	        <ImageView android:id="@+id/logo"
	            android:contentDescription="@string/app_name"
	            android:src="@drawable/ic_launcher"
	            android:layout_alignParentLeft="true"
	            android:layout_marginLeft="6dip"
	            android:layout_marginRight="6dip"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"/>
	        
	        <TextView android:id="@+id/app_version"
	            android:layout_toRightOf="@+id/logo"
	            android:layout_centerVertical="true"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"/>
	        
	        <EditText android:id="@+id/search"
	            android:layout_toLeftOf="@+id/toggle"
	            android:minWidth="120dip"
	            android:visibility="gone"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"/>
	        
	        <ToggleButton android:id="@+id/show_refresh"
	            android:textOn="@string/show_refresh"
	    		android:textOff="@string/show_refresh"
	            android:layout_toLeftOf="@+id/toggle"
	            android:visibility="gone"
	            android:layout_width="wrap_content"
	       	 	android:layout_height="wrap_content"/>
	        <ToggleButton android:id="@+id/toggle"
	            android:textOn="HOT"
	    		android:textOff="ABC"
	    		android:layout_alignParentRight="true"
	            android:layout_width="wrap_content"
	       	 	android:layout_height="wrap_content"/>
	    </RelativeLayout>
	    
	    <Button android:id="@+id/refresh"
	        android:text="@string/refresh"
	        android:visibility="gone"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	    
     </LinearLayout>
</RelativeLayout>